--- a/Bootstrap/background_color.html
+++ b/Bootstrap/background_color.html
@@ -17,6 +17,7 @@
         <p class="bg-warning">This is example text</p>
         <p class="bg-secondary">This is example text</p>
         <p class="bg-light">This is example text</p>
+        <p class="bg-dark text-white">This is example text</p>
     </div>
 </body>
 </html>
