--- a/Bootstrap/navbar.html
+++ b/Bootstrap/navbar.html
@@ -7,8 +7,9 @@
      <script src ="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-    <nav class="navbar navbar-expand-sm bg-warning navbar-light justify-content-end">
+<body style="height:2000px;">
+    <nav class="navbar navbar-expand-sm bg-warning navbar-light justify-content-end fixed-top">
+        <a href="#" class="navbar-brand">logo</a>
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a href="#" class="nav-link">Home</a>
@@ -23,6 +24,16 @@
                 <a href="#" class="nav-link">Contact</a>
             </li>
         </ul>
+
+        <!-- <span class="navbar-text">Welcome to Bootstrap</span> -->
     </nav>
+
+    <div class="container" style="margin-top: 120px;">
+        <p>welcome to fixed nav</p>
+        <p>welcome to fixed nav</p>
+        <p>welcome to fixed nav</p>
+        <p>welcome to fixed nav</p>
+        <p>welcome to fixed nav</p>
+    </div>
 </body>
 </html>
