--- a/Bootstrap/input.html
+++ b/Bootstrap/input.html
@@ -32,7 +32,7 @@
             <h6>select your education</h6>
 
                 <label for="ch1" class="form-check-label">
-                <input type="checkbox"class="form-check-input form-control-lg" name="bca" id="ch1" value="bca"> bca
+                <input type="checkbox"class="form-check-input" name="bca" id="ch1" value="bca"> bca
                 </label></div>
                 <div class="form-check">
                 <label for="ch2" class="form-check-label">
